--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+* Speeded up instance metadata retrieval using OrthancPluginLoadDicomInstance() from SDK 1.12.1
 * Support "X-Forwarded-Host" and "X-Forwarded-Proto" headers to compute BulkDataURI.
-* small speed-up the studies/../series/../metadata route when in "MainDicomTags" mode.
-* new "Experimental" mode for "SeriesMetadata" that is fetching tags from the DB or
+* Small speed-up the studies/../series/../metadata route when in "MainDicomTags" mode.
+* New "Experimental" mode for "SeriesMetadata" that is fetching tags from the DB or
   from the storage if they are missing (useful if you recently changed the "ExtraMainDicomTags"
   configuration)
 
@@ -11,14 +12,14 @@ Pending changes in the mainline
 Version 1.13 (2023-02-03)
 =========================
 
-* Use Orthanc SDK 1.11.3 to avoid a crash in Stow-RS jobs.
+* Use Orthanc SDK 1.11.3 to avoid a crash in STOW-RS jobs.
 
 
 Version 1.12 (2022-10-27)
 =========================
 
-* Stow-RS now calls to the plugin flavored /instances route and now also forwards
-  the HTTP headers from the Incoming Stow-RS request.
+* STOW-RS now calls to the plugin flavored /instances route and now also forwards
+  the HTTP headers from the Incoming STOW-RS request.
 
 
 Version 1.11 (2022-10-13)
@@ -32,7 +33,7 @@ Version 1.10 (2022-08-30)
 
 * speed-up the /metadata routes by a factor of 2 when in "MainDicomTags" or "Extrapolate"
   mode.
-* improved HTTP status code for Stow-RS (now returning 202 instead of 200 if some instances 
+* improved HTTP status code for STOW-RS (now returning 202 instead of 200 if some instances 
   could not be ingested).  Also reporting a Failure Reason "out of resources 0xA700"  if
   new instances can not be ingested because storage is full.
 
