added 'MetadataWorkerThreadsCount' configuration

--- a/NEWS
+++ b/NEWS
@@ -1,9 +1,12 @@
 Pending changes in the mainline
 ===============================
 
-* Speeded up instance metadata retrieval using OrthancPluginLoadDicomInstance() from SDK 1.12.1
+* speed improvements:
+  - Speeded up instance metadata retrieval using OrthancPluginLoadDicomInstance() from SDK 1.12.1
+  - Using multiple threads to compute the studies/../series/../metadata route when in "Full" mode.
+    New configuration: "MetadataWorkerThreadsCount" defaults to 4
+  - Small speed-up the studies/../series/../metadata route when in "MainDicomTags" mode.
 * Support "X-Forwarded-Host" and "X-Forwarded-Proto" headers to compute BulkDataURI.
-* Small speed-up the studies/../series/../metadata route when in "MainDicomTags" mode.
 * Fix issue #216 (Requests fail due to bad parsing of the accept HTTP header (semi-colons))
 
 
