--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Pending changes in the mainline
+===============================
+
+* Removed misleading log messages about transcoding.
+  https://discourse.orthanc-server.org/t/dicomweb-plugin-1-13-possible-unnecessary-transcoding/3979
+
 Version 1.15 (2023-08-24)
 =========================
 
