--- a/NEWS
+++ b/NEWS
@@ -4,7 +4,7 @@ Pending changes in the mainline
 * Removed misleading log messages about transcoding.
   https://discourse.orthanc-server.org/t/dicomweb-plugin-1-13-possible-unnecessary-transcoding/3979
 * Fix parsing of Accept header "multipart/related; type=application/octet-stream; transfer-syntax=*" that is used by OHIF.
-
+* When retrieving frames, WADO-RS may now retrieve transcoded instances from Orthanc StorageCache (for Orthanc >= 1.12.2)
 
 Version 1.15 (2023-08-24)
 =========================
