--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,9 @@
 Pending changes in the mainline
 ===============================
 
-Maintenance
------------
+
+Version 1.17 (2024-06-05)
+=========================
 
 * WADO-RS retrieve frame: fix issue 219 (https://orthanc.uclouvain.be/bugs/show_bug.cgi?id=219)
   by converting BigEndianExplicitVR to LittleEndianExplicitVR.
