Added a 'Server' entry in the DICOMWeb job content
--HG--
branch : OrthancDicomWeb-1.17

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+* Added a "Server" entry in the DICOMWeb job content.
+
 
 Version 1.17 (2024-06-05)
 =========================
