--- a/NEWS
+++ b/NEWS
@@ -2,6 +2,8 @@ Pending changes in the mainline
 ===============================
 
 * Added a "Server" entry in the DICOMWeb job content.
+* Fixed parsing of numerical values in QIDO-RS response that prevented, amongst other,
+  the retrieval of NumberOfStudyRelatedInstances, NumberOfStudyRelatedSeries, ...
 
 
 Version 1.17 (2024-06-05)
