--- a/NEWS
+++ b/NEWS
@@ -4,6 +4,7 @@ Pending changes in the mainline
 * Added a "Server" entry in the DICOMWeb job content.
 * Fixed parsing of numerical values in QIDO-RS response that prevented, amongst other,
   the retrieval of NumberOfStudyRelatedInstances, NumberOfStudyRelatedSeries, ...
+* Fixed non latin PatientName values that were empty in some QIDO-RS responses.
 
 
 Version 1.17 (2024-06-05)
