--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,8 @@ Pending changes in the mainline
 * Fixed parsing of numerical values in QIDO-RS response that prevented, amongst other,
   the retrieval of NumberOfStudyRelatedInstances, NumberOfStudyRelatedSeries, ...
 * Fixed non latin PatientName values that were empty in some QIDO-RS responses.
+* Optimized the retrieval of single frame in WADO-RS when no transcoding is required.
+  This greatly improve download time of multi-frame images in OHIF.
 
 
 Version 1.17 (2024-06-05)
