--- a/NEWS
+++ b/NEWS
@@ -6,7 +6,7 @@ Pending changes in the mainline
   the retrieval of NumberOfStudyRelatedInstances, NumberOfStudyRelatedSeries, ...
 * Fixed non latin PatientName values that were empty in some QIDO-RS responses.
 * Optimized the retrieval of single frame in WADO-RS when no transcoding is required.
-  This greatly improve download time of multi-frame images in OHIF.
+  This greatly improves the download time of multi-frame images in OHIF.
 
 
 Version 1.17 (2024-06-05)
