--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,10 @@
 Pending changes in the mainline
 ===============================
 
+
+Version 1.18 (2024-12-18)
+=========================
+
 * Added a "Server" entry in the DICOMweb job content
 * Fixed parsing of numerical values in QIDO-RS response that prevented, among other,
   the retrieval of "NumberOfStudyRelatedInstances", "NumberOfStudyRelatedSeries",...
