--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,5 @@
-Pending changes in the mainline
-===============================
+Version 1.19 (2025-04-29)
+=========================
 
 => Minimum Orthanc version: 1.12.5 <=
 => Recommended SDK version: 1.12.4 <=
