--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,9 @@
 * Fix calls to /studies/../series/../rendered returning a 404 if the series has
   multiple instances.
   https://discourse.orthanc-server.org/t/thumbnail-orthanc-stone-viewer-issue/5827/3
-  
+* Fix response of /servers/../stow where the study id was repeated for each instance.
+  The response also now contains the list of sent instances.
+
 
 Version 1.19 (2025-04-29)
 =========================
