--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,6 @@
+Version 1.20 (2025-05-12)
+=========================
+
 => Minimum Orthanc version: 1.12.5 <=
 => Recommended SDK version: 1.12.4 <=
 => Minimum SDK version: 1.12.1 <=
