--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,9 @@ Pending changes in the mainline
   files from the storage when answering to a WADO-RS query.  A value > 1 is meaningful 
   only if the storage is a distributed network storage (e.g object storage plugin).
   A value of 0 means reading and writing are performed in sequence (default behaviour).
+* New configuration "EnablePerformanceLogs" to display performance logs.  Currently
+  only showing the time required to execute a WADO-RS query.  For example:
+  WADO-RS: elapsed: 26106623 us, rate: 14.86 files/s, 155.23Mbps
 
 
 Version 1.20 (2025-05-12)
