--- a/NEWS
+++ b/NEWS
@@ -7,7 +7,7 @@ Pending changes in the mainline
   A value of 0 means reading and writing are performed in sequence (default behaviour).
 * New configuration "EnablePerformanceLogs" to display performance logs.  Currently
   only showing the time required to execute a WADO-RS query.  For example:
-  WADO-RS: elapsed: 26106623 us, rate: 14.86 files/s, 155.23Mbps
+  WADO-RS: elapsed: 26106623 us, rate: 14.86 instances/s, 155.23Mbps
 
 
 Version 1.20 (2025-05-12)
