--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,8 @@
 Pending changes in the mainline
 ===============================
 
+TODO before release: update to framework 1.12.10+ (with BlockingSharedMessageQueue)
+
 * Fixed a possible deadlock when using "WadoRsLoaderThreadsCount" > 1 when the HTTP
   client disconnects while downloading the response.
 * Fixed "Success: Success" errors when trying to send resources synchronously to a remote DICOMweb
